--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <script type="module" src="main.js"></script>
 </head>
 <body>
-  <svg width="400" height="200"></svg>
+  <svg style="border: 1px solid red;"></svg>
 </body>
 </html>
