--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script type="module" src="main.js"></script>
 </head>
 <body>
-  <svg style="border: 1px solid" width='100%' height='300'></svg>
+  <svg style="border: 1px solid" width='100%' height='50vh'></svg>
   <!-- <svg style="border: 1px solid red;"></svg> -->
 </body>
 </html>
