--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.9.0/d3.min.js"></script>
   <script type="module" src="main.js"></script>
 </head>
+
 <body>
-  <svg style="border: 1px solid" width='100%' height='50vh'></svg>
-  <!-- <svg style="border: 1px solid red;"></svg> -->
+  <svg width="70%" height="80vh" style="border: 1px solid gray"></svg>
 </body>
+
 </html>
